# visual_foresight

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
data_collection/widowx/: hparams.py
docker/: Dockerfile
envs/: base_env.py
envs/mujoco_env/: base_mujoco_env.py
envs/sawyer_robot/: autograsp_sawyer_env.py  base_sawyer_env.py
envs/util/: action_util.py
examples/: dataset_reader.py
foresight_rospkg/: package.xml
foresight_rospkg/launch/: start_cameras.launch  start_gripper_autoupdate_sudri.launch
foresight_rospkg/src/: run_robot.py
sim/: benchmarks.py  run.py  sim.py
sim/util/: synchronize_tfrecs.py
visual_mpc/agent/: __init__.py  benchmarking_agent.py  general_agent.py  offline_agent.py
visual_mpc/datasets/: __init__.py  base_dataset.py  hdf5_dataset.py  robonet_dataset.py  tfrecord_dataset.py
visual_mpc/envs/: base_env.py  offline_env.py
visual_mpc/foresight_rospkg/: CMakeLists.txt
visual_mpc/foresight_rospkg/launch/: camera.launch  start_cameras.py  start_gripper.launch  start_impedance.sh
visual_mpc/foresight_rospkg/src/: log_cameras.py  run_robot.py  save_camera_points.py  video_stream.cpp
visual_mpc/foresight_rospkg/src/misc/: send_urdf_fragment.py
visual_mpc/foresight_rospkg/src/misc/wsg50/: wsg_50_mod.urdf
visual_mpc/foresight_rospkg/src/utils/: get_points.py  record_motion.py  record_pushback.py  robot_controller.py  robot_wsg_controller.py
visual_mpc/foresight_rospkg/src/utils/camera_calib/: calibrated_camera.py  setup_calibrated_sawyer_cams.py
visual_mpc/misc/: file_2_record.py
visual_mpc/sim/: run.py  (+2 more)
(+217 files in other folders)
